<resources>
    <string name="app_name">Online Medicine App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Login/Signup</string>
    <string name="nav_header_subtitle">What are you looking for?</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_main">Medicine App</string>
    <string name="search_box_hint">Search here for any priscription medicine</string>
    <string name="action_cart">Cart</string>
    <string name="welcome_text">We will send you an OTP sms to verify your number.</string>
    <string name="otp_sent_text">We sent an otp to the number</string>
    <string name="agree_text"><![CDATA[I agree to Terms of Use & Privacy Policy]]></string>
    <string name="upload_rx_text">(We only accept valid prescription, with doctor\'s name and registration clearly visible.)</string>
    <string name="no_internet_text">No Internet Connection.</string>
    <string name="speech_not_supported">Speech Not Supported</string>
    <string name="Rs">\u20B9  </string>
    <string name="title_activity_select_presc">SelectPrescActivity</string>
    <string name="title_activity_presc_preview">PrescPreviewActivity</string>
    <string name="api_error_msg">Sorry, we have a server error. Please try again.</string>
    <string name="title_activity_add_presc">AddPrescActivity</string>
    <string name="string_next">What\'s next?\n\n1. Our Pharmacist will digitize and approve your ordered prescription.\n\n2. You\'ll be notified on every status of your order vai SMS / Email.</string>
    <string name="contact_no1">+911122334455</string>
    <string name="presc_guide">\t1. Don’t crop out any part of the image.\n2. Avoid blurred image.\n3. Include details of doctor and patient + clinic visit date.\n4. Medicines will be dispensed as per prescription.</string>
    <string name="call_text_heading">Call +911122334455</string>
    <string name="call_text_subheading">Get your medicines faster</string>
    <string name="step1_text">Upload an image of your prescription</string>
    <string name="step2_text">We verify and prepare your order.</string>
    <string name="step3_text">Delivery at your home</string>
    <string name="steps_title">3 Easy steps to order</string>
    <string name="call_order_no">+911122334455</string>
    <string name="support_email">help@onlinemedicine.com</string>
    <string name="download_app_text">Download Online Medicine App from Google Play Store, click here https://www.onlinemedicineapp.com/</string>
    <string name="prescription_details_missing">Your prescription details are missing! Do you want to add it or skip and continue ordering? </string>
    <string name="facebook_page_url">https://www.facebook.com/OnlineMedicineDeliveryApp/</string>
    <string name="instagram_page_url">https://www.instagram.com/onlinemedicinedeliveryapp</string>
    <string name="whatsapp_not_found">Can\'t perform this action make sure you have installed whatsapp.</string>
</resources>
