<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical">

            <include layout="@layout/search_view" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <android.support.v4.view.ViewPager
                    android:id="@+id/viewPagerOffers"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:clipToPadding="false"
                    android:overScrollMode="never"
                    android:visibility="visible">
                    <!--
                                    android:paddingLeft="25dp"
                                    android:paddingRight="25dp"
                                    android:layout_marginLeft="-10dp"-->
                </android.support.v4.view.ViewPager>

                <android.support.design.widget.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"
                    android:clipToPadding="false"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp"
                    app:tabMinWidth="5dp" />
            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/imgPhone"
                    android:layout_width="38dp"
                    android:layout_height="38dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="5dp"
                    android:layout_toLeftOf="@id/llcenter"
                    android:src="@drawable/smartphone" />

                <LinearLayout
                    android:id="@+id/llcenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="@string/call_text_heading"
                        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                        android:textColor="@color/colorTextHeading"
                        android:textStyle="bold" />


                </LinearLayout>


                <android.support.v7.widget.CardView
                    android:id="@+id/fabCall"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_toRightOf="@id/llcenter"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardBackgroundColor="@android:color/transparent"
                    app:cardCornerRadius="24dp"
                    app:cardElevation="0dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.v7.widget.AppCompatImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/call_icon_colored" />


                    </RelativeLayout>
                </android.support.v7.widget.CardView>
            </RelativeLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:padding="2dp"
                android:text="Or"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/steps_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:weightSum="3">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imgStep1"
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/step1_upload"
                        android:tint="@color/colorPrimary" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imgStep1"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:text="@string/step1_text"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Time"
                        android:textColor="@color/colorTextHeading"
                        android:textStyle="bold" />
                </RelativeLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/steps_arrow"
                    android:tint="@color/colorTextHeading" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imgStep2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/step2_order_prepared"
                        android:tint="@color/colorPrimary" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imgStep2"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:text="@string/step2_text"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Time"
                        android:textColor="@color/colorTextHeading"
                        android:textStyle="bold" />
                </RelativeLayout>

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/steps_arrow"
                    android:tint="@color/colorTextHeading" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <android.support.v7.widget.AppCompatImageView
                        android:id="@+id/imgStep3"
                        android:layout_width="46dp"
                        android:layout_height="46dp"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/step3_delivery"
                        android:tint="@color/colorPrimary" />

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/imgStep3"
                        android:layout_marginTop="10dp"
                        android:padding="5dp"
                        android:text="@string/step3_text"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.Compat.Notification.Time"
                        android:textColor="@color/colorTextHeading"
                        android:textStyle="bold" />
                </RelativeLayout>
            </LinearLayout>


            <android.support.v7.widget.CardView
                android:id="@+id/btnUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:foreground="?attr/selectableItemBackgroundBorderless"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="3dp"
                app:cardElevation="2dp"
                app:contentPadding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="Upload Prescription"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/colorToolbarTitle"
                    android:textStyle="bold" />
            </android.support.v7.widget.CardView>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="15dp"
                android:background="@color/colorDivider" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="Shop By Category"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textStyle="bold" />

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recylcer_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:overScrollMode="never"></android.support.v7.widget.RecyclerView>
                </RelativeLayout>
            </android.support.v4.widget.NestedScrollView>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="Daily Needs"
                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                    android:textStyle="bold" />

                <Spinner
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:entries="@array/filter_no_items"
                    android:padding="8dp"
                    android:visibility="gone" />
            </RelativeLayout>

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/recylcer_view_daily"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:overScrollMode="never" />
                </RelativeLayout>
            </android.support.v4.widget.NestedScrollView>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btnBrowseMore"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="Browse More"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@color/colorToolbarTitle"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabScrollUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:rotation="90"
        android:src="@drawable/back_light_new"
        app:fab_size="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <include
        layout="@layout/layout_floating_button"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>